--- a/templates/result.html
+++ b/templates/result.html
@@ -3,36 +3,43 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Register</title>
-		<meta id="my-data" data-prediction1="{{prediction1}}">
+		<meta id="my-data" data-prediction="{{prediction}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../static/login.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+
 	</head>
 	<body>
 		<div class="register">
-			<div class="msg" >{{prediction}}</div>
+			<h1 style="background-color: greenyellow;">Fake Profile Detection for Matrimonial Sites</h1>
 			<form action="/" method="post" autocomplete="off">
 				<label for="caste1">
+					
 				</label>
-				<select id="caste1" name="caste1">
+				<select id="caste1" name="caste1" placeholder="HEllo">
+					<option value="" disabled selected>Select your Caste</option>
                     {% for i in range(0,469) %}
 					<option value="{{i}}">{{castes[i]}}</option>
 					{% endfor %}
-
                   </select>
 
                   <label for="degree">
+					
 				</label>
 				<select id="degree" name="degree">
+					<option value="" disabled selected>Select your Degree</option>
                     {% for i in range(0,69) %}
 					<option value="{{i}}">{{degrees[i]}}</option>
 					{% endfor %}
 				  </select>
 				  
                   <label for="employed1">
+					  
 				</label>
 				<select id="employed1" name="employed1">
+					<option value="" disabled selected>Select your Emplyment sector</option>
                     {% for i in range(0,7) %}
 					<option value="{{i}}">{{employs[i]}}</option>
 					{% endfor %}
@@ -41,6 +48,7 @@
                   <label for="income1">
 				</label>
 				<select id="income1" name="income1">
+					<option value="" disabled selected>Select your Income</option>
                     {% for i in range(0,28) %}
 					<option value="{{i}}">{{incomes[i]}}</option>
 					{% endfor %}
@@ -49,6 +57,7 @@
                   <label for="mother1">
 				</label>
 				<select id="mother1" name="mother1">
+					<option value="" disabled selected>Select your Mother tongue</option>
                     {% for i in range(0,57) %}
 					<option value="{{i}}">{{mothers[i]}}</option>
 					{% endfor %}
@@ -57,6 +66,7 @@
                   <label for="occupation">
 				</label>
 				<select id="occupation" name="occupation">
+					<option value="" disabled selected>Select your Occupation</option>
                     {% for i in range(0,45) %}
 					<option value="{{i}}">{{occs[i]}}</option>
 					{% endfor %}
@@ -65,20 +75,25 @@
                   <label for="religion1">
 				</label>
 				<select id="religion1" name="religion1">
+					<option value="" disabled selected>Select your Religion</option>
                     {% for i in range(0,6) %}
 					<option value="{{i}}">{{religions[i]}}</option>
 					{% endfor %}
 				  </select>
 				  
-				<button type="submit" value="Register" onclick="myfunc()"></button>
+				<input type="submit" value="Check">
 				
 			</form>
 		</div>
+		
 		<script>
-			function myfunc(){
-			var msg = $('#my-data').data('prediction1');
-			alert(msg);
-			}
+			var msg = $('#my-data').data('prediction');
+			$(document).ready(function(){
+			  swal(msg);
+			});
+		  </script>
+		<script>
+			
 		</script>
 	</body>
 </html>
