--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Register</title>
+		<title>Profile Detection</title>
 		<meta id="my-data" data-prediction="{{prediction}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="../static/login.css">
@@ -17,7 +17,7 @@
 				<label for="caste1">
 					
 				</label>
-				<select id="caste1" name="caste1" placeholder="HEllo">
+				<select id="caste1" name="caste1" required>
 					<option value="" disabled selected>Select Caste</option>
                     {% for i in range(0,469) %}
 					<option value="{{i}}">{{castes[i]}}</option>
@@ -27,7 +27,7 @@
                   <label for="degree">
 					
 				</label>
-				<select id="degree" name="degree">
+				<select id="degree" name="degree" required>
 					<option value="" disabled selected>Select Degree</option>
                     {% for i in range(0,70) %}
 					<option value="{{i}}">{{degrees[i]}}</option>
@@ -37,7 +37,7 @@
                   <label for="employed1">
 					  
 				</label>
-				<select id="employed1" name="employed1">
+				<select id="employed1" name="employed1" required>
 					<option value="" disabled selected>Select Employment Sector</option>
                     {% for i in range(0,7) %}
 					<option value="{{i}}">{{employs[i]}}</option>
@@ -46,7 +46,7 @@
 
                   <label for="income1">
 				</label>
-				<select id="income1" name="income1">
+				<select id="income1" name="income1" required>
 					<option value="" disabled selected>Select Income</option>
                     {% for i in range(0,28) %}
 					<option value="{{i}}">{{incomes[i]}}</option>
@@ -55,7 +55,7 @@
 				  
                   <label for="mother1">
 				</label>
-				<select id="mother1" name="mother1">
+				<select id="mother1" name="mother1" required>
 					<option value="" disabled selected>Select Mother Tongue</option>
                     {% for i in range(0,57) %}
 					<option value="{{i}}">{{mothers[i]}}</option>
@@ -64,7 +64,7 @@
 				  
                   <label for="occupation">
 				</label>
-				<select id="occupation" name="occupation">
+				<select id="occupation" name="occupation" required>
 					<option value="" disabled selected>Select Occupation</option>
                     {% for i in range(0,45) %}
 					<option value="{{i}}">{{occs[i]}}</option>
@@ -73,7 +73,7 @@
 				  
                   <label for="religion1">
 				</label>
-				<select id="religion1" name="religion1">
+				<select id="religion1" name="religion1" required>
 					<option value="" disabled selected>Select Religion</option>
                     {% for i in range(0,6) %}
 					<option value="{{i}}">{{religions[i]}}</option>
