--- a/static/login.css
+++ b/static/login.css
@@ -40,8 +40,8 @@ body {
     color: #9da3ac;
 }
 .login .links a.active, .register .links a.active {
-    border-bottom: 3px solid #82ae46;
-    color: #82ae46;
+    border-bottom: 3px solid greenyellow;
+    color: greenyellow;
 }
 .login form, .register form {
     display: flex;
@@ -55,7 +55,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: #82ae46;
+    background-color: greenyellow;
     color: #5b6574;
 }
 .login form input[type="password"], .login form input[type="text"], .login form input[type="email"], .register form input[type="password"], .register form input[type="text"], .register form input[type="email"],.register form input[type="tel"],.register form select {
@@ -69,7 +69,7 @@ body {
     width: 100%;
     padding: 15px;
     margin-top: 20px;
-    background-color: #82ae46;
+    background-color: greenyellow;
     border: 0;
     cursor: pointer;
     font-weight: bold;
@@ -77,7 +77,7 @@ body {
     transition: background-color 0.2s;
 }
 .login form input[type="submit"]:hover, .register form input[type="submit"]:hover {
-    background-color: #82ae46;
+    background-color: greenyellow;
     transition: background-color 0.2s;
 }
 .navtop {
