Added a timeout function to alert script

--- a/templates/result.html
+++ b/templates/result.html
@@ -86,8 +86,9 @@
 		</div>
 		
 		<script>
-			var msg = $('#my-data').data('prediction');
-			$(document).ready(function(){
+			setTimeout(function(){
+				var msg = $('#my-data').data('prediction');
+				$(document).ready(function(){
 				if(msg=="Enter data to predict")
 			  	swal(msg);
 				else if(msg=="Real")
@@ -95,6 +96,8 @@
 				else if(msg=="Fake")
 				swal(msg,"","error");
 			});
+			},3000);
+			
 		  </script>
 		<script>
 			
